Fix Subscribe button's width not correct on Safari.

--- a/source/assets/stylesheets/application/components/subscribe.css.scss
+++ b/source/assets/stylesheets/application/components/subscribe.css.scss
@@ -37,6 +37,7 @@
     input {
       height: 48px;
       width: 80vw;
+      min-width: 300px;
       max-width: 411px;
       font-size: 18px;
       border-radius: 8px;
@@ -55,14 +56,14 @@
       border-radius: 8px;
       line-height: 42px;
       font-size: 21px;
-      width: 180px;
+      min-width: 180px;
 
       @include max-screen(767px) {
-        margin-top: 23px;
+        margin: 23px 0 0 0;
       }
 
       @include min-screen(768px) {
-        margin-left: 23px;
+        margin: 0 0 0 23px;
       }
 
       &:hover {
